[project]
name = "pytheoryoflift"
version = "0.2.0"
description = "Introductory computational aerodynamics in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["scipy>=1.15.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytheoryoflift"]

[dependency-groups]
examples = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
]
